<resources>
    <string name="app_name">Weather</string>
    <string name="temperature">Temperature</string>
    <string name="condition">Condition</string>
    <string name="location">Location</string>
    <string name="powered_by_yahoo">powered by Yahoo!</string>
    <string name="condition_icon">Condition Icon</string>
    <string name="loading">Loading&#8230;</string>
    <string name="temperature_output">%1$d&#176;%2$s</string>
    <string name="update_location">Update Location</string>
    <string name="settings">Settings</string>
    <string name="cache_exception">No Cached Weather Data</string>
    <string name="location_permission_needed">Device location is needed for Weather GeoLocation</string>
    <string name="disable_geolocation">Change Settings</string>
    <string name="day">Day</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
