<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".WeatherActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <ImageView
            android:id="@+id/weatherIconImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/condition_icon"
            android:src="@drawable/icon_na" />


        <TextView
            android:id="@+id/conditionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/weatherIconImageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/condition"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/light_text" />

        <TextView
            android:id="@+id/locationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/conditionTextView"
            android:layout_centerHorizontal="true"
            android:text="@string/location"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/light_text"
            android:textStyle="bold" />


        <LinearLayout
            android:id="@+id/forecastContainer"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@+id/locationTextView"

            android:layout_marginTop="60dp"
            android:background="@color/forecast_color"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin">

                <TextView
                    android:id="@+id/temperatureTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/temperature"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/light_text"
                    android:textSize="40dp"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/temperatureTextView"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/highTemperatureTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:paddingTop="5dp"
                        android:text="@string/high"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/light_text" />

                    <TextView
                        android:id="@+id/lowTemperatureTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"

                        android:layout_marginLeft="20dp"

                        android:text="@string/low"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/light_text" />
                </LinearLayout>
            </RelativeLayout>

            <fragment
                android:id="@+id/forecast_0"
                android:name="com.chandan.android.weatherappassignment.fragments.WeatherConditionFragment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:layout="@layout/fragment_weather_condition" />

            <fragment
                android:id="@+id/forecast_1"
                android:name="com.chandan.android.weatherappassignment.fragments.WeatherConditionFragment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:layout="@layout/fragment_weather_condition" />

            <fragment
                android:id="@+id/forecast_2"
                android:name="com.chandan.android.weatherappassignment.fragments.WeatherConditionFragment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:layout="@layout/fragment_weather_condition" />
               </LinearLayout>

    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTint="#ff5722"
        android:src="@drawable/ic_add" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|left"
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTint="#ff5722"
        android:src="@drawable/ic_info" />


</android.support.design.widget.CoordinatorLayout>